# bootloader-practice

./: CMakeLists.txt  README.md  one-key-build.sh
cmake/: toolchain-arm-none-eabi.cmake
code/include/: gpio.h  iwdg.h  pmbus_cmds.h  pmbus_i2c.h  pmbus_i2c_slave.h  stm32g4xx_hal_conf.h  system_clock_config.h
code/ldscript/: stm32g474xx_flash.ld
code/src/: gpio.c  iwdg.c  main.c  pmbus_cmds.c  pmbus_i2c_slave.c  pmsbu_i2c.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  system_clock_config.c  system_stm32g4xx.c
code/startup/: startup_stm32g4xx.s
